[package]
name = "cpkg"
description = "A dead simple C package manager."
version = "0.8.2"
edition = "2021"

authors = ["David Cruz <codebycruz@gmail.com>"]
license = "MIT"
keywords = ["c-lang", "package", "management"]
categories = ["command-line-utilities", "development-tools", "config"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
indoc = "2.0.5"
rustyline = "14.0.0"
self_update = "0.39.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
walkdir = "2.5.0"
which = "6.0.1"
