[package]
name = "cpkg"
description = "A dead simple C package manager."
version = "0.11.0"
edition = "2021"

authors = ["David Cruz <codebycruz@gmail.com>"]
license = "MIT"
keywords = ["c-lang", "package", "management"]
categories = ["command-line-utilities", "development-tools", "config"]

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
indoc = "2.0.5"
nestify = "0.3.3"
rustyline = "14.0.0"
self_update = { version = "0.40.0", features = ["rustls"] }
serde = { version = "1.0.200", features = ["derive"] }
tempfile = "3.10.1"
toml = "0.8.12"
walkdir = "2.5.0"
which = "6.0.1"

[dev-dependencies]
tempfile = "3.10.1"
